# solana_simple_contract

./: Cargo.toml  readme.md
src/: lib.rs
