[package]
name = "solana_simple_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.18.6", version = "1.18.6" }
[lib]
crate-type = ["cdylib"] # 必须指定生成共享库文件